# imgexp

./: CMakeLists.txt  README.txt  license_template.txt  run_cmake_msvc2013win64.cmd
expbuilder/: CMakeLists.txt
expbuilder/src/: mainwindow.cpp
expbuilder/ui/: mainwindow.ui
include/: config.h  imgexp.h  imgexputil.h
src/: imgexp.cpp  imgexputil.cpp
test/: CMakeLists.txt
test/src/: imgexptest.cpp
test/testdata/patterns/: BlipsFound.pattern
